--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Hugo Hermit"
@@ -26,10 +26,10 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
   # Categories are disabled by default.
 
 [params]
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04 -0700"
+  dateform        = " "
+  dateformShort   = " "
+  dateformNum     = " "
+  dateformNumTime = " "
 
   # Metadata mostly used in document's head
   # description = ""
