--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "/"
 languageCode = "en-us"
 defaultContentLanguage = "en"
-title = "Hugo Hermit"
+title = "fazi"
 theme = "hermit"
 # enableGitInfo = true
 pygmentsCodefences  = true
