--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 
   [[params.social]]
     name = "email"
-    url  = "faizaan.shahid@gmail.com"
+    url  = "mailto:faizaan.shahid@gmail.com"
 
 
 [menu]
